# arkhamanalytics

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml  test_generation.yml
ingestion/: README.md  __init__.py  requirements-dev.txt  requirements.txt
ingestion/arkhamanalytics/: agentic_test_generator.py  audit_logger.py  example_module.py  file_utils.py  llm_test_write.py  llm_test_writer.py  prompt_engine.py  run_llm_test_gen.py  schema_utils.py  test_header_utils.py  test_module.py  test_subject_module.py  transformations.py  widget_manager.py  widget_presets.py
ingestion/modules/: __init__.py  audit_logger.py  file_utils.py  schema_utils.py  transformations.py  widget_manager.py
ingestion/notebooks/: General Ingestion Notebook - Clean.ipynb
ingestion/notebooks/working_ingestion/: 00_setup_storage_mount (1).ipynb  README (2).md  README.md  nb_bronze_ingestion (1).ipynb  nb_bronze_ingestion (8).ipynb  nb_bronze_ingestion.ipynb  nb_mounting.ipynb
ingestion/tests/: __init__.py  conftest.py  test_agentic_test_generator.py  test_audit_logger.py  test_example_module.py  test_file_utils.py  test_llm_test_writer.py  test_prompt_engine.py  test_schema_utils.py  test_transformation.py  test_widget_manager.py
notebooks/: General Ingestion Notebook.ipynb  Storage Account Mounting.ipynb
