[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.py$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
  | .pytest_cache
  | .ipynb_checkpoints
)/
'''

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = ["build", "dist", "__pycache__", ".venv", ".ipynb_checkpoints"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = "tests/|build/"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
